tests/cases/standard-library/errors/vec/std-vec-macro-new-shape.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let vec = Vec!(i64, ref mut zone);
  zone::destroy(zone);
  return 0;
}
